# nanduti

./: .gitignore  .mcp.json  CONVENTIONS.md  Cargo.toml  PRODUCTION_READINESS_REVIEW.md  README.md  docker-compose.yaml  flake.nix  pending.md  vetted.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docker/: README.md
fedimint-nwc/: Cargo.toml
fedimint-nwc-api/: Cargo.toml
fedimint-nwc-api/src/: encryption.rs  lib.rs  mcp_server.rs  nostr_client.rs  nwc_handler.rs  router.rs  state.rs
fedimint-nwc-api/src/handlers/: federations.rs  invoices.rs  mod.rs  nwc.rs  payments.rs  transactions.rs
fedimint-nwc-core/: Cargo.toml
fedimint-nwc-core/src/: federation.rs  fedimint_client.rs  keys.rs  lib.rs  lightning.rs  models.rs  nwc_protocol.rs  storage.rs
fedimint-nwc/src/: api_client.rs  main.rs  mcp_server.rs
nanduti-api/: Cargo.toml
nanduti-api/src/: encryption.rs  lib.rs  mcp_server.rs  nostr_client.rs  nwc_handler.rs  router.rs  server.rs  state.rs  types.rs
nanduti-api/src/handlers/: federations.rs  invoices.rs  mod.rs  nwc.rs  payments.rs  test_federations.rs  test_invoices.rs  test_nwc.rs  test_payments.rs  test_transactions.rs  transactions.rs
nanduti-api/tests/: encryption_test.rs
nanduti-cli/: Cargo.toml
nanduti-cli/src/: api_client.rs  main.rs  mcp_server.rs
nanduti-core/: Cargo.toml
nanduti-core/src/: constants.rs  federation.rs  fedimint_client.rs  keys.rs  lib.rs  lightning.rs  mnemonic_store.rs  models.rs  nwc_protocol.rs  storage.rs
nanduti-core/tests/: key_tests.rs
tests/: integration_test.rs
