[package]
name = "fedimint-nwc"
version = "0.1.0"
edition = "2021"
authors = ["Fedimint NWC Contributors"]
description = "CLI for multi-federation Fedimint wallet with Nostr Wallet Connect"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fedimint-nwc"
path = "src/main.rs"

[dependencies]
# Internal - Only API needed for CLI (no direct core access)
fedimint-nwc-api = { path = "../fedimint-nwc-api" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Utils
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for API mode
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# MCP (optional)
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = []
mcp = ["rmcp", "schemars", "fedimint-nwc-api/mcp"]