[package]
name = "nanduti-api"
version = "0.1.0"
edition = "2021"
authors = ["Nanduti Contributors"]
description = "API server for Nanduti NWC protocol implementation"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal
nanduti-core = { path = "../nanduti-core" }

# Fedimint types
fedimint-core = { workspace = true }
fedimint-bip39 = { workspace = true }

# Nostr
nostr-sdk = { workspace = true }
nostr = { workspace = true }

# Web
axum = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
futures = { workspace = true }

# Utils
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
hex = { workspace = true }

# Utils for IDs
uuid = { workspace = true }
rand = { workspace = true }
lru = "0.12"

# Lightning
lightning-invoice = { workspace = true }

[dev-dependencies]
# Testing
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
mockall = "0.13"