[package]
name = "nanduti"
version = "0.1.0"
edition = "2021"
authors = ["Nanduti Contributors"]
description = "CLI for multi-backend NWC (Nostr Wallet Connect) implementation"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nanduti"
path = "src/main.rs"

[dependencies]
# Internal - Both API and Core for strong types
nanduti-api = { path = "../nanduti-api" }
nanduti-core = { path = "../nanduti-core" }

# Fedimint types
fedimint-core = { workspace = true }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Utils
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bech32 = { workspace = true }

# HTTP client for API mode
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# MCP (optional)
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = []
mcp = ["rmcp", "schemars"]